--- a/wiki/IndividualAlgorithms.wiki
+++ b/wiki/IndividualAlgorithms.wiki
@@ -29,4 +29,4 @@
     * [http://code.google.com/p/cdsc-image-processing-pipeline/downloads/detail?name=frontpropagation-c.zip&can=2&q= C++ version]
 
   * *Geodesic Active Contours (ITK)*
-    * [http://code.google.com/p/cdsc-image-processing-pipeline/downloads/detail?name=itk-geodesic-seg-c%2B%2B.zip&can=2&q= Original C++ version (Requires ITK common libraries, see docs)] - [http://cdsc-image-processing-pipeline.googlecode.com/files/README_GAC_itk.txt Documentation (TXT)]
+    * [http://code.google.com/p/cdsc-image-processing-pipeline/downloads/detail?name=itk-geodesic-seg-c%2B%2B.zip&can=2&q= Original C++ version (Requires ITK common libraries, see documentation)] - [http://cdsc-image-processing-pipeline.googlecode.com/files/README_GAC_itk.txt Documentation (TXT)]
