--- a/wiki/License.wiki
+++ b/wiki/License.wiki
@@ -75,8 +75,7 @@ layouts and accessors, or small macros, inline functions and templates
    Library is used in it and that the Library and its use are
    covered by this License.
 
-   b) Accompany the object code with a copy of the GNU GPL and this license
-   document.
+   b) Accompany the object code with a copy of the GNU GPL and this license document.
 
  ==4. Combined Works.==
 
@@ -90,8 +89,7 @@ the following:
    the Library is used in it and that the Library and its use are
    covered by this License.
 
-   b) Accompany the Combined Work with a copy of the GNU GPL and this license
-   document.
+   b) Accompany the Combined Work with a copy of the GNU GPL and this license document.
 
    c) For a Combined Work that displays copyright notices during
    execution, include the copyright notice for the Library among
@@ -100,13 +98,7 @@ the following:
 
    d) Do one of the following:
 
-       0) Convey the Minimal Corresponding Source under the terms of this
-       License, and the Corresponding Application Code in a form
-       suitable for, and under terms that permit, the user to
-       recombine or relink the Application with a modified version of
-       the Linked Version to produce a modified Combined Work, in the
-       manner specified by section 6 of the GNU GPL for conveying
-       Corresponding Source.
+       0) Convey the Minimal Corresponding Source under the terms of this License, and the Corresponding Application Code in a form suitable for, and under terms that permit, the user to recombine or relink the Application with a modified version of the Linked Version to produce a modified Combined Work, in the manner specified by section 6 of the GNU GPL for conveying Corresponding Source.
 
        1) Use a suitable shared library mechanism for linking with the
        Library.  A suitable mechanism is one that (a) uses at run time
@@ -145,13 +137,11 @@ choice, if you do both of the following:
 
 ==6. Revised Versions of the GNU Lesser General Public License.==
 
-  The Free Software Foundation may publish revised and/or new versions
-of the GNU Lesser General Public License from time to time. Such new
+  The Free Software Foundation may publish revised and/or new versions of the GNU Lesser General Public License from time to time. Such new
 versions will be similar in spirit to the present version, but may
 differ in detail to address new problems or concerns.
 
-  Each version is given a distinguishing version number. If the
-Library as you received it specifies that a certain numbered version
+  Each version is given a distinguishing version number. If the Library as you received it specifies that a certain numbered version
 of the GNU Lesser General Public License "or any later version"
 applies to it, you have the option of following the terms and
 conditions either of that published version or of any later version
@@ -160,8 +150,7 @@ received it does not specify a version number of the GNU Lesser
 General Public License, you may choose any version of the GNU Lesser
 General Public License ever published by the Free Software Foundation.
 
-  If the Library as you received it specifies that a proxy can decide
-whether future versions of the GNU Lesser General Public License shall
+  If the Library as you received it specifies that a proxy can decide whether future versions of the GNU Lesser General Public License shall
 apply, that proxy's public statement of acceptance of any version is
 permanent authorization for you to choose that version for the
 Library.
