--- a/wiki/ImageViewer.wiki
+++ b/wiki/ImageViewer.wiki
@@ -10,10 +10,7 @@ The ImageViewer application can be adapted as a testbed for new image processing
   * Advanced layout capabilities (multiple tabs, custom layouts 2x2, 2x4 and side-by-side tabs)
   * Support for common medical imaging formats (DICOM, Analyze 7.5, raw images, and visual human dataset (VHD) images)
   * Several built-in 2D segmentation algorithms: geodesic active contours, front propagation
-  * Built-in support for reading Annotation Image Markup
-  * Built-in support for visualizing LIDC XML annotations
-  * Built-in access to RSNA Medical Imaging Resource Center (MIRC) query service
-  * Support for volume rendering using Java3D
+  * Integrated support for [http://www.mii.ucla.edu/imageserver/ ImageServer]
 
 =Requirements=
   * Java Virtual Machine Standard Edition 1.6+
@@ -25,7 +22,7 @@ Two methods for obtaining and running the ImageViewer code exists.
 ==Run from Precompiled Archive=
 Download the *[http://cdsc-image-processing-pipeline.googlecode.com/files/imageViewer-2.1.zip ImageViewer distribution package]*.
 
-To run, execute the following command:
+Once downloaded, to start the application, execute the following command:
 
 {{{java -Xms256m -Xmx1024m -jar imageviewer.jar -nonet}}}
 
