Edited wiki page ImageViewer through web user interface.

--- a/wiki/ImageViewer.wiki
+++ b/wiki/ImageViewer.wiki
@@ -1,7 +1,7 @@
 #summary A Java-based medical image viewer and manipulation tool.
 
 =Overview=
-The CDSC/MII imageViewer is a Java-based medical image viewing application that is written to be a modular image manipulation and visualization platform that can be executed for any computer running an instance of the Java Virtual Machine. The application has networking capabilities that can be tied to an [http://www.mii.ucla.edu/imageserver/ ImageServer] network to pull images from a local area network or an enterprise picture archiving and communication system (PACS). ImageViewer also has built-in support for the caBIG Annotation Image Markup project, the RSNA MIRC service, and implementation of active contours and front propagation segmentation tools.
+The CDSC/MII imageViewer is a Java-based medical image viewing application that is written to be a modular image manipulation and visualization platform that can be executed for any computer running an instance of the Java Virtual Machine. The application has networking capabilities that can be tied to an [http://www.mii.ucla.edu/imageserver/ ImageServer] network to pull images from a local area network or an enterprise picture archiving and communication system (PACS). It also includes several 2D segmentation algorithms (front propagation, active contours). ImageViewer is also being extended to support Java 3D volume rendering, the caBIG Annotation Image Markup project, and the RSNA MIRC service. These features are disabled in the current release but will be enabled as testing of these components are completed.
 
 The ImageViewer application can be adapted as a testbed for new image processing algorithms as well as integrated into existing Java applications as a robust, integrated image viewer tool. Documentation is provided on how to write a new plugin for the application or how to import project files into an existing application.
 
