--- a/wiki/ImageProcessingPlugin.wiki
+++ b/wiki/ImageProcessingPlugin.wiki
@@ -6,6 +6,11 @@ The image processing pipeline plug-in for imageViewer provides a graphical user 
 
 For the initial release, we have pre-integrated the plugin to a modified version of the imageViewer distributable. In subsequent releases, we will make the plugin available separately with instructions on how to install the plugin with the latest version of the imageViewer application available [http://code.google.com/p/cdsc-image-processing-pipeline/wiki/ImageViewer here].
 
+The following algorithms have been incorporated into the image processing plugin:
+  * Rician denoising
+  * Rician deblurring
+  * Fluid registration
+
 = Download =
 
 A version of imageViewer with the plugin already integrated can be downloaded by *[http://cdsc-image-processing-pipeline.googlecode.com/files/imageviewer-v2.1-w-pipeline.zip clicking here]*.
@@ -29,7 +34,7 @@ NOTE: If you wish to statically link the external library code into the final .d
 ==Compile Code==
   # cd to the project directory, where the build file {{{build.xml}}} resides
   # execute {{{ant clean}}} to build from scratch, starting from a clean slate
-  # execute {{{SEQUENTIAL_CDSC_PIPELINE=1 ant}}} to build the sequential version of the pipeline.
+  # execute {{{ant}}} to build the sequential version of the pipeline.
 
 ==Execute Code==
 In the command line prompt, execute {{{java -Djava.library.path=<system library path in case pipeline object needs to load external libraries>:build/imageviewer/src/imageviewer/tools/plugins/cdsc/native -classpath build/imageviewer/imageviewer.jar imageviewer.system.ImageViewerClient}}}
