--- a/wiki/MedicalBenchmarkVersion1.wiki
+++ b/wiki/MedicalBenchmarkVersion1.wiki
@@ -1,14 +1,14 @@
 #summary Initial release of tools and algorithms related to 3D medical image processing.
 #labels Featured
 
-= Medical Imaging Benchmark 1: Pulmonary Nodule Volumetric Analysis =
 
 <table style="width: 100%">
 	<tr>
 		<td style="width: 363px">
 		<img alt="screenshot" height="559" src="http://www.mii.ucla.edu/~willhsu/static/screenshot.png" width="449" /></td>
 		<td valign="top">
-= Contents =
+= Medical Imaging Benchmark 1: Pulmonary Nodule Volumetric Analysis =
+== Contents ==
   * [http://code.google.com/p/cdsc-image-processing-pipeline/wiki/About About]
     * [http://code.google.com/p/cdsc-image-processing-pipeline/wiki/ImageViewer ImageViewer]
     * [http://code.google.com/p/cdsc-image-processing-pipeline/wiki/ImageProcessingPlugin Image Processing Pipeline Plugin]
@@ -16,13 +16,13 @@
   * [http://code.google.com/p/cdsc-image-processing-pipeline/downloads/list Downloads]
   * [http://code.google.com/p/cdsc-image-processing-pipeline/wiki/License License]
 
-= Disclaimer =
+== Disclaimer ==
 The above algorithms have been made available "as-is" and are meant to provide representative examples of current image processing techniques that are being developed in a research environment. The algorithms are neither validated nor certified to be used for primary diagnostic imaging used in clinical workflow and/or patient care.
 
-= Additional Resources =
+== Additional Resources ==
   * Information about the architecture of the image processing pipeline has been presented in a recent [http://www.mii.ucla.edu/~willhsu/static/cdsc-pipeline-poster-2010.pdf poster (PDF)].
 
-= Contact =
+== Contact ==
 We welcome the community's input on the released software and algorithms. You may direct any questions, comments, or suggestions that you may have about the released applications and source code to [mailto:willhsu@mii.ucla.edu William Hsu].
 </td>
 	</tr>
