Edited wiki page CDSC_CAD_Pipeline through web user interface.

--- a/wiki/CDSC_CAD_Pipeline.wiki
+++ b/wiki/CDSC_CAD_Pipeline.wiki
@@ -1,4 +1,5 @@
 #summary Second release of tools and algorithms related to 3D medical image processing with a focus application of adaptive image reconstruction and nodule detection.
+#labels Featured
 
 = Introduction =
 
