Edited wiki page CDSC_CAD_Pipeline through web user interface.

--- a/wiki/CDSC_CAD_Pipeline.wiki
+++ b/wiki/CDSC_CAD_Pipeline.wiki
@@ -34,7 +34,7 @@ A description of the pipeline can be [http://www.mii.ucla.edu/~willhsu/static/CD
 			<td><a href="https://onedrive.live.com/download?cid=9CE3D2200742EE14&resid=9CE3D2200742EE14%215430&authkey=ADBk2EFstC0nkqE">Download</a></td>
 			<td>--</td>
 			<td>--</td>
-			<td>  * Use the provided reconstructed dataset below</td>
+			<td>Use the provided reconstructed dataset below</td>
 		</tr>
 		<tr>
 			<td>Detection</td>
